fix whitespace on romania-curata text

--- a/mptracker/static/website.css
+++ b/mptracker/static/website.css
@@ -33,6 +33,10 @@
     width: 200px;
 }
 
+.romania-curata-text {
+    white-space: pre-wrap;
+}
+
 
 /*************************
  *   activitychart   *
